# P2-ETF-ROUGH-PATH-FORECASTER

./: ,gitignore  README.md  app.py  config.yaml  constants.py  data_pipeline.py  docs.md  explore.ipynb  forecasting.py  kernel_engine.py  log_ode.py  makefile  models.py  module_equity.py  module_fi.py  outputs.py  predict.py  pyproject.toml  requirements.txt  sample_data.parquet  selection.py  setup.py  signature_core.py  test_core.py  test_integration.py  train_fixed.py  train_shrinking.py  upload_to_hub.py  utils.py
.github/workflows/: ci_tests.yml  daily_forecast.yml  weekly_retrain.yml
